feat(ui,api): restart/stop workflow run v2 jobs
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/libs/workflow-graph/src/lib/node/fork-join-node.scss
+++ b/ui/libs/workflow-graph/src/lib/node/fork-join-node.scss
@@ -66,11 +66,11 @@
     }
 
     &.active {
-        border: 3px solid black;
+        border: 3px solid $polar_grey_0;
         padding: 1px;
     }
 
     &.highlight {
-        border-color: black;
+        border-color: $polar_grey_0;
     }
 }
