--- a/ui/libs/workflow-graph/src/lib/jobs-graph.scss
+++ b/ui/libs/workflow-graph/src/lib/jobs-graph.scss
@@ -26,7 +26,7 @@
     }
 
     &.highlight {
-        border-color: black;
+        border-color: $polar_grey_0;
     }
 
     .title {
@@ -73,7 +73,7 @@
                     stroke: $polar_grey_3;
 
                     &.highlight {
-                        stroke: black !important;
+                        stroke: $polar_grey_0 !important;
                     }
 
                     :host-context(.night) & {
