--- a/ui/src/app/views/projectv2/run-list/run-list.scss
+++ b/ui/src/app/views/projectv2/run-list/run-list.scss
@@ -126,7 +126,7 @@
         text-align: left;
         white-space: nowrap;
         text-overflow: ellipsis;
-        margin: 0;;
+        margin: 0;
       }
     }
 
