--- a/ui/src/app/views/workflowv3/graph/workflowv3-stages-graph.scss
+++ b/ui/src/app/views/workflowv3/graph/workflowv3-stages-graph.scss
@@ -20,7 +20,7 @@
                 stroke: $polar_grey_3;
 
                 &.highlight {
-                    stroke: black !important;
+                    stroke: $polar_grey_0 !important;
                 }
 
                 :host-context(.night) & {
