--- a/ui/libs/workflow-graph/src/lib/node/job-node.scss
+++ b/ui/libs/workflow-graph/src/lib/node/job-node.scss
@@ -114,7 +114,7 @@
         background-color: inherit;
 
         [nz-button] {
-            margin: 10px;
+            margin-left: 10px;
             border-width: 2px;
         }
 
