--- a/ui/libs/workflow-graph/src/lib/node/matrix-node.scss
+++ b/ui/libs/workflow-graph/src/lib/node/matrix-node.scss
@@ -146,7 +146,7 @@
                     height: 18px;
                     width: 18px;
                     min-width: unset;
-                    margin: 0 5px;
+                    margin-left: 4px;
                 }
             }
 
