--- a/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
+++ b/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
@@ -5,7 +5,7 @@
                 <nz-collapse nzAccordion *ngIf="!newConsumer.id">
                     <nz-collapse-panel [(nzActive)]="panels[formStepName.INFORMATIONS]"
                                        (click)="clickOpenStep(formStepName.INFORMATIONS)"
-                                       nzHeader="Informations">
+                                       nzHeader="Information">
                         <form nz-form nzLayout="vertical">
                             <nz-row>
                                 <nz-col [nzSpan]="10">
